<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu_information"
        android:orderInCategory="1"
        android:title="@string/my_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_point_usage_history"
        android:orderInCategory="2"
        android:title="@string/point_usage_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_lotto_participation_history"
        android:orderInCategory="3"
        android:title="@string/lotto_participation_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_product_purchase_details"
        android:orderInCategory="4"
        android:title="@string/product_purchase_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_logout"
        android:orderInCategory="5"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
