<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultParentLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.InformationActivity"
    tools:showIn="@layout/activity_information">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.example.wschd.client.base.ClearEditText
                android:id="@+id/information_edit_name"
                style="@style/DefaultEditText"
                android:hint="@string/name"
                android:inputType="text" />

            <com.example.wschd.client.base.PasswordEditText
                android:id="@+id/information_edit_password"
                style="@style/DefaultEditText"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <com.example.wschd.client.base.PasswordEditText
                android:id="@+id/information_edit_password_confirm"
                style="@style/DefaultEditText"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <com.example.wschd.client.base.PasswordEditText
                android:id="@+id/information_edit_new_password"
                style="@style/DefaultEditText"
                android:hint="@string/new_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/information_button_update"
                style="@style/ParticipateButton"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:onClick="customOnClick"
                android:text="@string/update" />

            <Button
                android:id="@+id/information_button_delete"
                style="@style/ParticipateButton"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_weight="1"
                android:onClick="customOnClick"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>